--- a/templates/header.html
+++ b/templates/header.html
@@ -18,7 +18,7 @@
                 <img src="images/LOGO.png" alt="Logo Anniversaire TONE" class="logo">
             </div>
             <div class="nav-right">
-                <a href="javascript:void(0);" class="nav-link" onclick="openCreditsModal();">Crédit</a>            
+                <a href="javascript:void(0);" class="nav-link" id="credits-link">Crédit</a>            
             </div>
         </div>
     </nav>
