--- a/templates/header.html
+++ b/templates/header.html
@@ -15,10 +15,10 @@
                 <a href="index.html" class="nav-link">Accueil</a>
             </div>
             <div class="nav-center">
-                <img src="images/LOGO.png" alt="Logo Anniversaire TONE" class="logo">
+                <img src="images/LOGO.png" alt="Logo Anniversaire TONE" class="logo" role="img" tabindex="-1" style="pointer-events:none;cursor:default;">
             </div>
             <div class="nav-right">
-                <a href="javascript:void(0);" class="nav-link" id="credits-link">Crédit</a>            
+                <button class="nav-link" id="credits-link">Crédit</button>            
             </div>
         </div>
     </nav>
